@@ -36,6 +36,7 @@
  * add simplified facade to SSTableWriter for bulk loading use
    (CASSANDRA-2911)
  * fix re-using index CF sstable names after drop/recreate (CASSANDRA-2872)
+ * prepend CF to default index names (CASSANDRA-2903)
 
 
 0.8.1
